fix footer on mobile

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,8 +3,10 @@
   padding: 56px $side-indent-mobile;
 
   @include page-grid;
+  display: block;
 
   @include on-tablet {
+    display: grid;
     padding-inline: $side-indent-tablet;
     padding-block: 88px;
   }
@@ -106,8 +108,10 @@
     width: 100%;
 
     @include page-grid;
+    display: block;
 
     @include on-tablet {
+      display: grid;
       grid-column: span $columnsTablet;
       margin-top: 48px;
     }
